bug: extra space when virtual keyboard hidden

--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ body {
     & > #keyboard-wrapper {
         display: flex;
         justify-content: center;
+    
+    &:not(:has(> div)) {
+        display: none;
+    }
     }
 
 
